hphp/test/zend/good/ext/posix/tests/posix_getgrnam.php
<?php

var_dump(posix_getgrnam(NULL));
var_dump(posix_getgrnam(1));
var_dump(posix_getgrnam(''));

?>